--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<div :elseif="count < 20">The count is between 10 and 19! ${count}</div>
 		<div :elseif="count < 30">The count is between 20 and 29! ${count}</div>
 		<div :else>The count is 30 or more! ${count}</div>
+		<div>Count squared is ${count * count}</div>
 
 		<script type="module">
 			import $ from "./dist/manifold.es.js";
