Minification head screwed on straight

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div>Count squared is ${count * count}</div>
 
 		<script type="module">
-			import $ from "./dist/manifold.es.js";
+			import $ from "./dist/manifold.js";
 			const myState = $.create()
 				.add("count", 0)
 				.add("popup", (e) => console.log(e))
