--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 			.red {
 				color: red;
 			}
+
+			html {
+				background: black;
+				color: lightgray;
+			}
+
+			input {
+				background: gray;
+				color: white;
+			}
 		</style>
 	</head>
 
