Correct each iteration count

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 		</div>
 
 		<script type="module">
+			window.__MF_DEBUG_EACH = true;
 			import $ from "./dist/manifold.js";
 			const myState = $.create()
 				.add("count", 0)
