--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div>Family Members:</div>
 			<ul>
 				<li :each="someArray as {name, age}">
-					${name} (${age} years old)
+					${name} (${age} years old) ${count}
 				</li>
 			</ul>
 		</div>
