Fix weird situations where obviously string values get expression parsed

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<ul>
 				<li
 					:each="list as { id, text }, key"
-					:style:view-transition-class="'list-item'"
+					:style:view-transition-class="list-item"
 				>
 					${key}: ${id} ${text}
 				</li>
