--- a/index.html
+++ b/index.html
@@ -23,8 +23,34 @@
 				display: none;
 			}
 
-			::view-transition-group(.list-item) {
-				animation-duration: 3s;
+			::view-transition-group(*.list-item) ::view-transition-old(*) {
+				animation: list-item-out 0.3s ease-out;
+			}
+
+			::view-transition-group(*.list-item) ::view-transition-new(*) {
+				animation: list-item-in 0.3s ease-in;
+			}
+
+			@keyframes list-item-in {
+				from {
+					opacity: 0;
+					transform: translateX(-20px);
+				}
+				to {
+					opacity: 1;
+					transform: translateX(0);
+				}
+			}
+
+			@keyframes list-item-out {
+				from {
+					opacity: 1;
+					transform: translateX(0);
+				}
+				to {
+					opacity: 0;
+					transform: translateX(20px);
+				}
 			}
 		</style>
 	</head>
@@ -85,11 +111,9 @@
 		<div style="margin-top: 1rem" :if="list.length > 2">
 			<div>Family Members:</div>
 			<ul>
-				<li
-					:each="list as { id, text }, key"
-					:style:view-transition-class="list-item"
-				>
+				<li class="list-item" :each="list as { id, text }, key">
 					${key}: ${id} ${text}
+					<button :onclick="removeFromList(key)">REMOVE</button>
 				</li>
 			</ul>
 		</div>
@@ -120,6 +144,9 @@
 						? myState.list[myState.list.length - 1].id + 1
 						: 1;
 					myState.list.push({ id: nextId, text: `Item ${nextId}` });
+				})
+				.add("removeFromList", (key) => {
+					myState.list.splice(key, 1);
 				})
 				.build();
 
