Fix vt name applications

--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
 		<button :onclick="addToList()">Add to List</button>
 		<button :onclick="list.pop()">Remove from List</button>
 
+		<p>End content</p>
+
 		<script type="module">
 			window.__MF_DEBUG_EACH = true;
 			import $ from "./src/main.js";
