--- a/index.html
+++ b/index.html
@@ -3,80 +3,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Manifold Demo</title>
-
-		<style>
-			.red {
-				color: red;
-			}
-
-			html {
-				background: black;
-				color: lightgray;
-			}
-
-			input {
-				background: gray;
-				color: white;
-			}
-
-			@keyframes list-item {
-				from {
-					opacity: 0;
-					transform: translateX(20px);
-				}
-				to {
-					opacity: 1;
-					transform: translateX(0);
-				}
-			}
-
-			@keyframes list-item-out {
-				from {
-					opacity: 1;
-					transform: translateX(0);
-				}
-				to {
-					opacity: 0;
-					transform: translateX(-20px);
-				}
-			}
-
-			/* Fade transitions for fetchContent demo */
-			@keyframes fade-in {
-				from {
-					opacity: 0;
-				}
-				to {
-					opacity: 1;
-				}
-			}
-			@keyframes fade-out {
-				from {
-					opacity: 1;
-				}
-				to {
-					opacity: 0;
-				}
-			}
-			::view-transition-new(*.fade) {
-				animation: fade-in 250ms ease both;
-			}
-			::view-transition-old(*.fade) {
-				animation: fade-out 250ms ease both;
-			}
-
-			/* Separate animations for new vs old snapshots */
-			::view-transition-new(*.list-item) {
-				animation: list-item 300ms ease both;
-			}
-			::view-transition-old(*.list-item) {
-				animation: list-item-out 300ms ease both;
-			}
-
-			.mf-hidden {
-				display: none;
-			}
-		</style>
+		<link rel="stylesheet" href="index.css" />
 	</head>
 
 	<body data-mf-register class="mf-hidden">
